[tool.poetry]
name = "simple-image-upload-api"
version = "0.1.0"
description = ""
authors = ["mitoconcrete <xogns98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
boto3 = "^1.35.59"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
pillow = "^11.0.0"
scour = "^0.38.2"
svglib = "^1.5.1"
opencv-python-headless = "^4.10.0.84"
numpy = "^2.1.3"
svgwrite = "^1.4.3"
python-multipart = "^0.0.17"
sqlalchemy = "^2.0.36"
celery = "^5.4.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["dist", "build", "venv", "env", ".venv", ".env", ".git", ".pytest_cache", ".vscode", ".idea", "__pycache__"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# select Default values: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F", "T201", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
omit = [
    # python
    "*/__init__.py",
    # tests
    "*/tests/*.py",
    "*/tests.py",
    "*/test_*.py",
]

[tool.pytest.ini_options]
pythonpath = "."

